--- a/.github/workflows/convert_webp.yml
+++ b/.github/workflows/convert_webp.yml
@@ -6,6 +6,9 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       
+      - name: install webp
+        run: sudo apt install webp
+
       - name: run curl
         run: curl -sf https://raw.githubusercontent.com/shimajima-eiji/Settings_Environment/main/for_Mac/file2webp.sh | sh -s -- .
 
