--- a/.github/workflows/convert_webp.yml
+++ b/.github/workflows/convert_webp.yml
@@ -6,28 +6,34 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       
-      - name: install webp, tee
+      # curlに必要なパッケージをインストール
+      - name: install webp
         run: sudo apt install webp
 
+      # リポジトリ内のファイルをwebpに変換する。
+      # 後で使うのでteeで結果とファイルを出力している
       - name: run curl
         run: curl -sf https://raw.githubusercontent.com/shimajima-eiji/Settings_Environment/main/for_Mac/file2webp.sh | sh -s -- . | tee file2webp.log
         
+      # webpに変換したファイル数を取得（残念ながら仕様のため変換0でtrue / 変換したら1以上になりfalse)
+      # 0/1〜を出力しているのはcurlしたスクリプトの最終出力で件数を表示している
       - name: result check
         id: result
         run: tail -n 1 file2webp.log
         continue-on-error: true
         
-      - name: debug
-        run: echo $CONTEXT
-        env:
-          CONTEXT: ${{ toJSON(steps.result) }}
+      # teeで作ったログファイルは不要なので削除。内容が知りたいならgithubを参照
+      - name: remove checkfile
+        run: rm file2webp.log
         
       - name: git setting
         run: |
           git config --global user.email "${{ secrets.EMAIL }}"
           git config --global user.name "shimajima-eiji"
-          
+
+      # webp変換した場合のみ処理する
       - name: Commit files
+        if: steps.check_something.outcome == 'failure'
         run: |
           git add -A
           git commit -m "[Update]converted webp by Github Actions"
