--- a/.github/workflows/convert_webp.yml
+++ b/.github/workflows/convert_webp.yml
@@ -31,6 +31,12 @@ jobs:
           git config --global user.email "${{ secrets.EMAIL }}"
           git config --global user.name "shimajima-eiji"
 
+      # デバッグ
+      - name: output step context
+        run: echo $CONTEXT
+        env:
+          CONTEXT: ${{ toJSON(steps.check_something) }}
+
       # webp変換した場合のみ処理する
       - name: Commit files
         if: steps.check_something.outcome == 'failure'
