webp変換に対応

--- a/.github/workflows/convert_webp.yml
+++ b/.github/workflows/convert_webp.yml
@@ -1,33 +1,77 @@
-name: convert_webp
-on: [push]
+# ポイントは`hub pull-request -f -m "${MESSAGE}" -h ${BRANCH_HEAD} -b ${BRANCH_BASE} -a ${REVIEWER} -r ${REVIEWER}`
+# ブランチ名に日付を入れたのは、push時にブランチが残っているとエラーになるので必ず新しいブランチを生成させるため
+# pushするユーザーはGAを指定しないと、レビュアーに反映されない（自分をレビュアーにできない）
+
+name: webpに変換する
+on:
+  push:
+    branches: [ main ]
+
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
       
-      # curlに必要なパッケージをインストール
-      - name: install webp
-        run: sudo apt install webp
-
-      # リポジトリ内のファイルをwebpに変換する。
-      # 後で使うのでteeで結果とファイルを出力している
-      - name: run curl
-        run: curl -sf https://raw.githubusercontent.com/shimajima-eiji/Settings_Environment/main/for_Mac/file2webp.sh | sh -s -- . | tee file2webp.log
-        
-      # webp変換した場合のみ処理する
-      - name: Commit files
+      - name: webp変換パッケージインストール
         run: |
-          if [ $(tail -n 1 file2webp.log) -ne 0 ]
+          sudo apt install python3 pip
+          pip install pathlib pillow python-box
+          
+      - name: webp変換
+        run: |
+          curl -sf https://raw.githubusercontent.com/shimajima-eiji/__Operation-Maintenance/main/for_github/workflows/convert_webp.py | python3
+      
+      - name: 更新状態を確認
+        id: check_files
+        # 実行結果としてはエラーではないので、continue-on-errorでパスさせる
+        # Ref: https://qiita.com/ljourm/items/556f5ccc8425891865de
+        continue-on-error: true
+        run: |
+          if [ "$(git status -s)" ]
           then
-            rm file2webp.log  # 先にログファイルを消さないと、ログファイルもpushしてしまう
-            git config --global user.email "${{ secrets.EMAIL }}"
-            git config --global user.name "shimajima-eiji"
-            git add -A
-            git commit -m "[Update]converted webp by Github Actions"
-            git pull
-            git push
-            echo "[COMPLETE] convert to webp."
+            echo "[Run] ファイルの変更を検出したため、処理を継続"
+            
           else
-            echo "[SKIP] No convert."
-          fi        
+            echo "[Skip] ファイルの変更がないため、処理を中断"
+            exit 1  # 本来はここで終了してしまうが、見た目上エラーにしたくないのでcontinue-on-errorを設定している
+          fi
+          
+      - name: コミット
+        id: commit
+        if: steps.check_files.outcome == 'success'
+        env: 
+          BRANCH_BASE: main
+          BRANCH_HEAD: avoid_protect
+          MESSAGE: Converted image -> webp by Github Actions
+          OWNER: shimajima-eiji
+          EMAIL: ${{ secrets.EMAIL }}
+        run: |
+          # ブランチ名は日付を追加して競合を回避する
+          BRANCH_HEAD="${BRANCH_HEAD}_$(TZ=JST-9 date '+%Y%m%d_%H%M%S')"
+          
+          # Ref: https://scrapbox.io/nwtgck/GitHub_Actions%E3%81%AE%E3%83%9C%E3%83%83%E3%83%88%E3%81%8C%E3%82%B3%E3%83%9F%E3%83%83%E3%83%88%E3%81%97%E3%81%9F%E3%82%88%E3%81%86%E3%81%AB%E3%82%A2%E3%82%A4%E3%82%B3%E3%83%B3%E3%82%92%E3%81%A4%E3%81%91%E3%82%8B%E3%81%AB%E3%81%AF%E3%83%A1%E3%83%BC%E3%83%AB%E3%81%AB%E3%80%8Cgithub-actions%5Bbot%5D@users.noreply.github.com%E3%80%8D%E3%82%92%E6%8C%87%E5%AE%9A%E3%81%99%E3%82%8C%E3%81%B0%E8%89%AF%E3%81%84
+          git config user.email "github-actions[bot]@users.noreply.github.com"
+          git config user.name "github-actions[bot]"
+          git add -A
+          git commit -m "${MESSAGE}"
+          git push -u origin ${BRANCH_BASE}:${BRANCH_HEAD}
+          echo "[COMPLETED] Success ${BRANCH_HEAD} push"
+
+          # 次のステップに変数を引き継ぐ
+          echo "::set-output name=OWNER::${OWNER}"
+          echo "::set-output name=BRANCH_BASE::${BRANCH_BASE}"
+          echo "::set-output name=BRANCH_HEAD::${BRANCH_HEAD}"
+          echo "::set-output name=MESSAGE::${MESSAGE}"
+
+      - name: プルリク作成
+        if: steps.commit.conclusion == 'success'
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # hubコマンドの実行にパスワードが必要
+          REVIEWER: shimajima-eiji
+          BRANCH_BASE: ${{ steps.commit.outputs.BRANCH_BASE }}
+          BRANCH_HEAD: ${{ steps.commit.outputs.BRANCH_HEAD }}
+          MESSAGE: ${{ steps.commit.outputs.MESSAGE }}
+        run: |
+          hub pull-request -f -m "${MESSAGE}" -h ${BRANCH_HEAD} -b ${BRANCH_BASE} -a ${REVIEWER} -r ${REVIEWER}
+          echo "[COMPLETED] Success create pull-request"
