--- a/.github/workflows/convert_webp.yml
+++ b/.github/workflows/convert_webp.yml
@@ -12,15 +12,37 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      
+
       - name: webp変換パッケージインストール
+        id: python_command
         run: |
           sudo apt install python3 pip
           pip install pathlib pillow python-box
-          
-      - name: webp変換
+
+      - name: python3.8以前では「PosixPath.with_stem」が使えないので、Pythonをバージョンアップする。
+        # Ref:
+        # - https://docs.python.org/ja/3/library/pathlib.html
+        # - https://codechacha.com/ja/ubuntu-install-python39
+        env:
+          version: 3.10
         run: |
-          curl -sf https://raw.githubusercontent.com/shimajima-eiji/__Operation-Maintenance/main/for_github/workflows/convert_webp.py | python3
+          pyc=$(python3)
+          if [ "$(python3 --version | cut -d"." -f2)" -lt 9 ]
+          then
+            sudo apt update && sudo apt install software-properties-common
+            sudo add-apt-repository ppa:deadsnakes/ppa
+            sudo apt install python${{version}}
+            pyc=python${{version}}
+          fi
+          
+          ${pyc} --version
+          echo "::set-output name=pyc::${pyc}"
+
+      - name: webp変換
+        env:
+          pycommand: ${{ steps.python_command.outputs.pyc }}
+        run: |
+          curl -sf https://raw.githubusercontent.com/shimajima-eiji/__Operation-Maintenance/main/for_github/workflows/convert_webp.py | ${pyc}
       
       - name: 更新状態を確認
         id: check_files
