--- a/.github/workflows/convert_webp.yml
+++ b/.github/workflows/convert_webp.yml
@@ -31,8 +31,8 @@ jobs:
           then
             sudo apt update && sudo apt install software-properties-common
             sudo add-apt-repository ppa:deadsnakes/ppa
-            sudo apt install python${{version}}
-            pyc=python${{version}}
+            sudo apt install python${version}
+            pyc=python${version}
           fi
           
           ${pyc} --version
