ModuleNotFoundError: No module named 'distutils.util'　を解決

--- a/.github/workflows/convert_webp.yml
+++ b/.github/workflows/convert_webp.yml
@@ -35,7 +35,7 @@ jobs:
 
       - name: webp変換パッケージインストール
         run: |
-          sudo apt install python3 pip
+          sudo apt install pip
           pip install pathlib pillow python-box
 
       - name: webp変換
