必要なパッケージが落ちていたので差し戻し

--- a/.github/workflows/convert_webp.yml
+++ b/.github/workflows/convert_webp.yml
@@ -38,7 +38,7 @@ jobs:
           pyc: ${{ steps.python_command.outputs.pyc }}
         run: |
           ${pyc} -m pip install --upgrade pip
-          ${pyc} -m pip install pathlib
+          ${pyc} -m pip install pathlib pillow python-box
 
       - name: webp変換
         env:
