--- a/.github/workflows/convert_webp.yml
+++ b/.github/workflows/convert_webp.yml
@@ -22,8 +22,8 @@ jobs:
         env:
           minor: 9
         run: |
-          pyc=$(python3)
-          ${pyc} --version  # デバッグ
+          pyc=$(python)
+          echo "${pyc}"  # デバッグ
           if [ "$(python3 --version | cut -d"." -f2)" -lt "${minor}" ]
           then
             sudo apt update && sudo apt install software-properties-common python3.${minor}-distutils
